
syntax = "proto3";
import "accounts/v1alpha1/apikeys/apikeys.proto";
option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/apikeys";
package accounts.v1alpha1.apikeys.v1;


service ApiKeyService {
    rpc CreateApiKey(CreateApiKeyRequest) returns (CreateApiKeyResponse);
    rpc GetOneApiKey(GetOneApiKeyRequest) returns (GetOneApiKeyResponse);
    rpc ListApiKey(ListApiKeyRequest) returns (ListApiKeyResponse);
    rpc UpdateApiKey(UpdateApiKeyRequest) returns (UpdateApiKeyResponse);
    rpc DeleteApiKey(DeleteApiKeyRequest) returns (DeleteApiKeyResponse);

}
